# beamng_zenoh_bridge

./: .gitignore  README.md  requirements.txt  run.bat
beamng/: create_accel_brake_map.py  create_map.py  get_position.py  get_rotation.py  gps.py  levels.py  main.py  shared.py  vehicle_pose_setup.ipynb
beamng/calibration/: accel.py  brake.py  calibration.py
beamng/msg/: autoware_control_msgs.py  autoware_vehicle_msgs.py  std_msgs.py  tier4_vehicle_msgs.py  vehicle_control_stamped.py
beamng/pub/: __init__.py  camera.py  clock.py  gps.py  imu.py  lidar.py  vehicle_control.py  vehicle_info.py
beamng/sensors/: __init__.py  camera.py  clock.py  gps.py  imu.py  lidar.py
beamng/singleton_manager/: vehicle.py  z_singleton_base.py
beamng/sub/: __init__.py  control.py  hazard_lights.py  model_control.py  turn_indicators.py
beamng/utils/: config_loader.py  create_sensor_thread.py  sleep_until_next.py
beamng/vehicle/: publishers.py  subscribers.py  vehicle_data.py  vehicle_interface.py
beamng_publisher/: .gitignore  Cargo.toml  setup.py
beamng_publisher/src/: beamng_data_publisher.rs  lib.rs
beamng_publisher/src/msg/: msg.rs
beamng_publisher/src/pub/: camera.rs  clock.rs  imu.rs  lidar.rs  vehicle_control.rs  vehicle_info.rs
config/: beamng-conf.json5
config/beamng/: base_config.json5  (+1 more)
notebooks/: config_loader.ipynb  vehicle_pose_setup.ipynb  vehicle_sensor.ipynb  zenoh_bridge.ipynb
scripts/: autoware_drive.bat  create_accel_brake_map.bat  create_pointcloud_map.bat
tasks/: create_accel_brake_map.py
zenoh_bridge/: .gitignore  Cargo.toml  setup.py
(+100 files in other folders)
